ec2.tf
data "aws_ami" "khm_ecs_optimized_amazon_linux_ami" {
  most_recent = true

  filter {
    name   = "name"
    values = ["amzn2-ami-ecs-hvm-*"]
  }

  filter {
    name   = "root-device-type"
    values = ["ebs"]
  }

  filter {
    name   = "architecture"
    values = ["x86_64"]
  }

  owners = ["591542846629"]
}

resource "aws_launch_template" "khm_launch_template" {
  name_prefix            = "khm_launch_template"
  image_id               = data.aws_ami.khm_ecs_optimized_amazon_linux_ami.id
  instance_type          = "t2.micro"
  key_name               = aws_key_pair.khm_ec2_access_key.key_name
  vpc_security_group_ids = [aws_security_group.khm_security_group.id]

  user_data = base64encode(templatefile("./templates/user_data.tpl", {
    cluster_name = aws_ecs_cluster.khm_ecs_cluster.name
  }))

  update_default_version = true

  block_device_mappings {
    device_name = "/dev/xvda"

    ebs {
      delete_on_termination = true
      encrypted             = true
      kms_key_id            = aws_kms_key.khm_ebs_encryption_key.arn
      volume_size           = 30
    }
  }

  iam_instance_profile {
    name = data.aws_iam_instance_profile.lab_instance_profile.name
  }

  depends_on = [aws_kms_key.khm_ebs_encryption_key]

  lifecycle {
    create_before_destroy = true
  }

  tags = {
    "Name" = "khm_server_public"
  }
}

resource "aws_autoscaling_group" "khm_autoscaling_group" {
  name_prefix               = "khm_autoscaling_group"
  max_size                  = 2
  min_size                  = 1
  vpc_zone_identifier       = [aws_subnet.khm_subnet_public.id]
  wait_for_capacity_timeout = "2m"

  launch_template {
    id      = aws_launch_template.khm_launch_template.id
    version = "$Latest"
  }

  tag {
    key                 = "Name"
    value               = "khm_server_public"
    propagate_at_launch = true
  }

  depends_on = [aws_launch_template.khm_launch_template]
}

resource "aws_instance" "khm_server_private" {
  ami                    = data.aws_ami.khm_ecs_optimized_amazon_linux_ami.id
  iam_instance_profile   = data.aws_iam_instance_profile.lab_instance_profile.name
  instance_type          = "t2.micro"
  vpc_security_group_ids = [aws_security_group.khm_security_group.id]
  subnet_id              = aws_subnet.khm_subnet_private.id

  user_data_base64 = base64encode(templatefile("./templates/mysql_data.tpl", {
    cluster_name = aws_ecs_cluster.khm_ecs_cluster.name
  }))

  root_block_device {
    encrypted  = true
    kms_key_id = aws_kms_key.khm_ebs_encryption_key.arn
  }

  tags = {
    "Name" = "khm_server_private"
  }
}
